--- a/docker/OpenResty-Orthanc/config/nginx.conf
+++ b/docker/OpenResty-Orthanc/config/nginx.conf
@@ -14,7 +14,7 @@ events {
 http {
     include    '/usr/local/openresty/nginx/conf/mime.types';
     default_type application/octet-stream;
-
+    client_max_body_size 50M;
     keepalive_timeout 65;
     keepalive_requests 100000;
     tcp_nopush on;
